--- a/problems.ipynb
+++ b/problems.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "71a9e07d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Sorted array using insertion sort:\n",
-      "[1, 10, 100, 1000, 1000, 10000, 10000, 100000, 1000000, 1000000, 1000000, 1000000, 10000000, 10000000, 10000000, 10000000]\n",
-      "Count of operations: 30\n",
-      "\n",
-      "Sorted array using counting sort:\n",
-      "[1, 10, 100, 1000, 1000, 10000, 10000, 100000, 1000000, 1000000, 1000000, 1000000, 10000000, 10000000, 10000000, 10000000]\n",
-      "Count of operations: 10000032\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def insertion_sort(arr):\n",
     "    c=0\n",
@@ -69,40 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "06f74777",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test: [7, 10, 8, 4, 1, 5, 6, 2, 3, 9]\n",
-      "test: [7, 8, 10, 4, 1, 5, 6, 2, 3, 9]\n",
-      "test: [7, 8, 4, 10, 1, 5, 6, 2, 3, 9]\n",
-      "test: [7, 8, 4, 1, 10, 5, 6, 2, 3, 9]\n",
-      "test: [7, 8, 4, 1, 5, 10, 6, 2, 3, 9]\n",
-      "test: [7, 8, 4, 1, 5, 6, 10, 2, 3, 9]\n",
-      "test: [7, 8, 4, 1, 5, 6, 2, 10, 3, 9]\n",
-      "test: [7, 8, 4, 1, 5, 6, 2, 3, 10, 9]\n",
-      "test1: [7, 8, 4, 1, 5, 6, 2, 3, 9, 10]\n",
-      "test: [1, 8, 4, 7, 5, 6, 2, 3, 9, 10]\n",
-      "test: [1, 2, 4, 7, 5, 6, 8, 3, 9, 10]\n",
-      "test1: [1, 2, 3, 7, 5, 6, 8, 4, 9, 10]\n",
-      "test: [1, 2, 3, 7, 5, 6, 8, 4, 9, 10]\n",
-      "test1: [1, 2, 3, 7, 5, 6, 8, 4, 9, 10]\n",
-      "test1: [1, 2, 3, 4, 5, 6, 8, 7, 9, 10]\n",
-      "test: [1, 2, 3, 4, 5, 6, 8, 7, 9, 10]\n",
-      "test: [1, 2, 3, 4, 5, 6, 8, 7, 9, 10]\n",
-      "test1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "test: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "test1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "\n",
-      "Sorted array using quick sort:\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def partition(arr, low, high):\n",
     "    p=arr[high]\n",
@@ -134,33 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1ce4d4e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original array:\n",
-      "[12, 11, 13, 5, 6, 7]\n",
-      "Left: [12, 11, 13] Right: [5, 6, 7]\n",
-      "Left: [12] Right: [11, 13]\n",
-      "Left: [11] Right: [13]\n",
-      "Merged: [11, 13]\n",
-      "Merged: [11, 12, 13]\n",
-      "Left: [5] Right: [6, 7]\n",
-      "Left: [6] Right: [7]\n",
-      "Merged: [6, 7]\n",
-      "Merged: [5, 6, 7]\n",
-      "Merged: [5, 6, 7, 11, 12, 13]\n",
-      "\n",
-      "Sorted array using merge sort:\n",
-      "[5, 6, 7, 11, 12, 13]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def merge_sort(arr):\n",
     "    if len(arr) > 1:\n",
@@ -203,30 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c16af011",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original array:\n",
-      "[1, 3, 2, 4, 5, 6, 7, 8]\n",
-      "\n",
-      "Array after rearranging even indices greater than odd indices:\n",
-      "1\n",
-      "   3\n",
-      "2\n",
-      "   5\n",
-      "4\n",
-      "   7\n",
-      "6\n",
-      "   8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def even_greater(arr):\n",
     "    for i in range(len(arr)-1):\n",
@@ -252,23 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9c0b65f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original array:\n",
-      "[0, 1, 0, 3, 12]\n",
-      "\n",
-      "Array after shifting zeros to the end:\n",
-      "[1, 3, 12, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def shift0(arr):\n",
     "    count=0\n",
@@ -291,21 +190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0d04f9b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original array:\n",
-      "[1, 2, 5]\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def make_equla(arr,k):\n",
     "    m=max(arr)\n",
@@ -330,23 +218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "739c6159",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original array:\n",
-      "[1, 2, 3, 4, 5]\n",
-      "\n",
-      "Array after calculating prefix sum:\n",
-      "[1, 3, 6, 10, 15]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def prefix_sum(arr):\n",
     "    for i in range(1, len(arr)):\n",
@@ -363,23 +238,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "c3bc31c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original stock prices:\n",
-      "[4, 2, 2, 2, 4]\n",
-      "\n",
-      "Maximum profit from stock buy and sell:\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def stock_buy_sell(prices):\n",
     "    profit=0\n",
@@ -400,6 +262,51 @@
     "    max_profit = stock_buy_sell(prices)\n",
     "    print(\"\\nMaximum profit from stock buy and sell:\")\n",
     "    print(max_profit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb314a4",
+   "metadata": {},
+   "source": [
+    "Chocolate Distribution Problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b8d307ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original array:\n",
+      "[7, 3, 2, 4, 9, 12, 56]\n",
+      "\n",
+      "Minimum difference after distributing elements:\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def distribute(arr,k):\n",
+    "    res=2**31\n",
+    "    arr.sort()\n",
+    "    for i in range(len(arr)-k+1):\n",
+    "        res=min(res,arr[i+k-1]-arr[i])\n",
+    "    return res\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    arr = [7, 3, 2, 4, 9, 12, 56]\n",
+    "    k = 5\n",
+    "    print(\"\\nOriginal array:\")\n",
+    "    print(arr)\n",
+    "    min_diff = distribute(arr, k)\n",
+    "    print(\"\\nMinimum difference after distributing elements:\")\n",
+    "    print(min_diff)"
    ]
   }
  ],
