--- a/problems.ipynb
+++ b/problems.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "71a9e07d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sorted array using insertion sort:\n",
+      "[1, 10, 100, 1000, 1000, 10000, 10000, 100000, 1000000, 1000000, 1000000, 1000000, 10000000, 10000000, 10000000, 10000000]\n",
+      "Count of operations: 30\n",
+      "\n",
+      "Sorted array using counting sort:\n",
+      "[1, 10, 100, 1000, 1000, 10000, 10000, 100000, 1000000, 1000000, 1000000, 1000000, 10000000, 10000000, 10000000, 10000000]\n",
+      "Count of operations: 10000032\n"
+     ]
+    }
+   ],
    "source": [
     "def insertion_sort(arr):\n",
     "    c=0\n",
@@ -54,10 +69,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "06f74777",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test: [7, 10, 8, 4, 1, 5, 6, 2, 3, 9]\n",
+      "test: [7, 8, 10, 4, 1, 5, 6, 2, 3, 9]\n",
+      "test: [7, 8, 4, 10, 1, 5, 6, 2, 3, 9]\n",
+      "test: [7, 8, 4, 1, 10, 5, 6, 2, 3, 9]\n",
+      "test: [7, 8, 4, 1, 5, 10, 6, 2, 3, 9]\n",
+      "test: [7, 8, 4, 1, 5, 6, 10, 2, 3, 9]\n",
+      "test: [7, 8, 4, 1, 5, 6, 2, 10, 3, 9]\n",
+      "test: [7, 8, 4, 1, 5, 6, 2, 3, 10, 9]\n",
+      "test1: [7, 8, 4, 1, 5, 6, 2, 3, 9, 10]\n",
+      "test: [1, 8, 4, 7, 5, 6, 2, 3, 9, 10]\n",
+      "test: [1, 2, 4, 7, 5, 6, 8, 3, 9, 10]\n",
+      "test1: [1, 2, 3, 7, 5, 6, 8, 4, 9, 10]\n",
+      "test: [1, 2, 3, 7, 5, 6, 8, 4, 9, 10]\n",
+      "test1: [1, 2, 3, 7, 5, 6, 8, 4, 9, 10]\n",
+      "test1: [1, 2, 3, 4, 5, 6, 8, 7, 9, 10]\n",
+      "test: [1, 2, 3, 4, 5, 6, 8, 7, 9, 10]\n",
+      "test: [1, 2, 3, 4, 5, 6, 8, 7, 9, 10]\n",
+      "test1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "test: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "test1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "\n",
+      "Sorted array using quick sort:\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "def partition(arr, low, high):\n",
     "    p=arr[high]\n",
@@ -89,10 +134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1ce4d4e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original array:\n",
+      "[12, 11, 13, 5, 6, 7]\n",
+      "Left: [12, 11, 13] Right: [5, 6, 7]\n",
+      "Left: [12] Right: [11, 13]\n",
+      "Left: [11] Right: [13]\n",
+      "Merged: [11, 13]\n",
+      "Merged: [11, 12, 13]\n",
+      "Left: [5] Right: [6, 7]\n",
+      "Left: [6] Right: [7]\n",
+      "Merged: [6, 7]\n",
+      "Merged: [5, 6, 7]\n",
+      "Merged: [5, 6, 7, 11, 12, 13]\n",
+      "\n",
+      "Sorted array using merge sort:\n",
+      "[5, 6, 7, 11, 12, 13]\n"
+     ]
+    }
+   ],
    "source": [
     "def merge_sort(arr):\n",
     "    if len(arr) > 1:\n",
@@ -135,10 +203,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c16af011",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original array:\n",
+      "[1, 3, 2, 4, 5, 6, 7, 8]\n",
+      "\n",
+      "Array after rearranging even indices greater than odd indices:\n",
+      "1\n",
+      "   3\n",
+      "2\n",
+      "   5\n",
+      "4\n",
+      "   7\n",
+      "6\n",
+      "   8\n"
+     ]
+    }
+   ],
    "source": [
     "def even_greater(arr):\n",
     "    for i in range(len(arr)-1):\n",
@@ -164,10 +252,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9c0b65f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original array:\n",
+      "[0, 1, 0, 3, 12]\n",
+      "\n",
+      "Array after shifting zeros to the end:\n",
+      "[1, 3, 12, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "def shift0(arr):\n",
     "    count=0\n",
@@ -190,10 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0d04f9b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original array:\n",
+      "[1, 2, 5]\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "def make_equla(arr,k):\n",
     "    m=max(arr)\n",
@@ -218,10 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "739c6159",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original array:\n",
+      "[1, 2, 3, 4, 5]\n",
+      "\n",
+      "Array after calculating prefix sum:\n",
+      "[1, 3, 6, 10, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "def prefix_sum(arr):\n",
     "    for i in range(1, len(arr)):\n",
@@ -238,10 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c3bc31c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original stock prices:\n",
+      "[4, 2, 2, 2, 4]\n",
+      "\n",
+      "Maximum profit from stock buy and sell:\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "def stock_buy_sell(prices):\n",
     "    profit=0\n",
@@ -274,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "b8d307ce",
    "metadata": {},
    "outputs": [
